@@ -81,6 +81,7 @@ public class CommandLineOptions {
 		"can be overridden temporarily by the -scene-dir option.\n" +
 		"\n" +
 		"Launcher options:\n" +
+		"  --update              download the latest version of Chunky and exit\n" +
 		"  --nolauncher          start Chunky as normal, but without opening launcher\n" +
 		"  --launcher            forces the launcher window to be displayed\n" +
 		"  --verbose             verbose logging in the launcher\n";
